--- a/views/login.hbs
+++ b/views/login.hbs
@@ -11,10 +11,11 @@
             <form  action="/login" method="post">
                 <input id="userinput" name="email" placeholder="enter your username" type="text">
             <input name="password" id="passwordinput" placeholder=" enter your password">
-            <button type="submit">login</button>
+            <a href="./otp.hbs"><button type="submit">login</button></a>
             <div>
                Don't have an account yet ? <a href="../signup"> signup</a>
             </div>
+            
     
             </form>
         </div>
